--- a/app/assets/stylesheets/session_forms/login_form.scss
+++ b/app/assets/stylesheets/session_forms/login_form.scss
@@ -1,11 +1,3 @@
-.login-page {
-  height: 100vh;
-  width: 100vw;
-  background: image-url("discord_background.jpeg");
-  display: flex;
-  align-items: center;
-}
-
 .login-container, .login-form {
   display: flex;
   flex-direction: column;
