--- a/app/assets/stylesheets/session_forms/register_form.scss
+++ b/app/assets/stylesheets/session_forms/register_form.scss
@@ -8,9 +8,6 @@
 }
 
 .register-container {
-  position: absolute;
-  top: 25%;
-  left: 25%;
   background: #36393F;
   margin: auto;
   border-radius: 5px;
@@ -57,4 +54,3 @@
 .password-input-container {
   padding: 0 0 15px 0;
 }
-
